fix: make extensions mutator skip operation with a wrong postgres version